Migrate permissions api, some schema inheritance
